--- a/css/mobile.css
+++ b/css/mobile.css
@@ -280,9 +280,6 @@ header .nav.show {
   grid-row: 3/4;
   font-size: calc(0.7em + 0.7vw);
 }
-.contact img {
-  display: none;
-}
 .contact form {
   grid-column: 2/3;
   grid-row: 4/5;
@@ -344,6 +341,9 @@ header .nav.show {
   padding: 0.7rem 0.7rem;
   cursor: pointer;
 }
+.contact form img {
+  display: none;
+}
 .contact .credits {
   grid-column: 2;
   grid-row: 6;
@@ -391,12 +391,11 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
-  color: white;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  color: var(--white);
   font-family: "Noto Sans Khmer Light";
 }
 
