--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,10 +23,9 @@ header .nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 5vw;
+  font-size: 1.2rem;
   padding-left: 2em;
   gap: calc(1em + 2vw);
-  cursor: pointer;
 }
 header .nav h1 {
   width: 67%;
@@ -50,13 +49,11 @@ header .nav.show {
 .container-header .logo {
   width: calc(3em + 6vw);
   margin-left: 1em;
-  cursor: pointer;
 }
 .container-header .menu {
   display: flex;
   flex-direction: column;
   gap: calc(0.3em + 0.8vw);
-  cursor: pointer;
   margin-right: 1em;
   z-index: 4;
 }
@@ -215,7 +212,7 @@ header .nav.show {
 .skills {
   display: grid;
   grid-template-columns: 45px 1fr 45px;
-  grid-template-rows: 90px repeat(6, 1fr);
+  grid-template-rows: 90px repeat(7, 1fr);
   background-color: var(--secondary-color);
   justify-items: center;
 }
@@ -223,7 +220,7 @@ header .nav.show {
   grid-column: 2/3;
   grid-row: 4/6;
   justify-self: stretch;
-  align-self: center;
+  align-self: flex-start;
   width: 100%;
 }
 .skills .p-skills {
@@ -249,9 +246,7 @@ header .nav.show {
   overflow: visible;
 }
 .projects .swiper-projects .swiper-slide {
-  min-height: 200px;
-  text-align: center;
-  font-size: 18px;
+  min-height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -263,6 +258,55 @@ header .nav.show {
   background-color: var(--primary-color);
   transform: scale(1.4);
   z-index: 2;
+}
+.projects .swiper-projects .swiper-slide img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.projects .swiper-projects .swiper-slide .project-01.show {
+  visibility: visible;
+}
+.projects .swiper-projects .swiper-slide .project-01 {
+  visibility: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
+  gap: 0.7em;
+  padding-top: 0.7em;
+}
+.projects .swiper-projects .swiper-slide .project-01 h1 {
+  color: var(--white);
+  font-family: "Noto Sans Khmer Semibold";
+}
+.projects .swiper-projects .swiper-slide .project-01 p {
+  font-size: 0.7rem;
+  color: var(--white);
+}
+.projects .swiper-projects .swiper-slide .project-01 p span {
+  color: var(--acent-color);
+}
+.projects .swiper-projects .swiper-slide .project-01 .buttons {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  top: 70%;
+  left: 13%;
+}
+.projects .swiper-projects .swiper-slide .project-01 .buttons a {
+  font-size: 0.8rem;
+  text-decoration: none;
+  background-color: transparent;
+  color: var(--white);
+  border: 2px var(--acent-color) solid;
+  padding: 0.4em;
+  border-radius: 0.4em;
 }
 .projects .swiper-projects .swiper-button-next,
 .projects .swiper-projects .swiper-button-prev {
@@ -339,7 +383,6 @@ header .nav.show {
   border-radius: 0.4rem;
   width: 30%;
   padding: 0.7rem 0.7rem;
-  cursor: pointer;
 }
 .contact form img {
   display: none;
@@ -453,176 +496,3 @@ main {
     transform: translateX(0);
   }
 }
-
-/* @include conf.mobile{
-
-    //Home
-    .home{
-        .b-h1 {
-            width: 80vw;
-            height: 59vh;
-          }
-
-        h1{font-size: 49vw;}
-        p{margin-top: 11em;}
-        .arrow{margin-top: 21em;}
-    }
-    //Header
-    header {
-
-        .nav{    
-            gap: 0em;
-            font-size: 5vw;
-
-            h1{
-                width: 55%;
-                height: 65px;
-                &:hover{
-                    border-bottom: 5px solid conf.$primary-color;
-
-                }
-            }
-        }
-    }
-    .container-header{
-        gap: 60vw; 
-
-        .menu{
-
-            &.close span:nth-child(2){
-                transform: rotate(-35deg) translate(-5px, 8px);
-            }
-
-        }
-    }
-
-    //Pagination
-    .swiper-pagination{
-
-        left: 3%;
-        margin-top: 72vw; 
-
-        .swiper-pagination-bullet {
-
-            width: 3.5vw;
-            height: 2vh;
-
-        }
-    }
-
-    .about{
-        gap: 0.6em;
-
-        .p-about{
-            grid-row: 4 / 6;
-            grid-column: 1 / 3;
-            justify-self: center;
-        }
-
-        .card-profile{
-
-            grid-column: 1 / 3;
-            grid-row: 3 / 4;
-            gap: 0.3em;
-
-
-            .rrss{
-                grid-column: 2;
-                gap: 0.4em;
-
-           }
-
-
-           .b-img {display: none;}
-            .p-animation{display: none; animation-iteration-count: 0;}
-        }
-
-    }
-
-    .skills{
-        .interests{display: none;}
-        .p-skills{
-            grid-column: 1 / 3;
-            width: 76%;
-
-        }
-
-        img{
-            grid-column: 1 / 3;
-            grid-row: 4 / 5;
-            margin-top: 12vw;
-            justify-self: center;
-        }
-
-    }
-
-    .projects{
-        grid-template-rows: repeat(9,1fr);
-        .swiper-projects {
-            grid-column: 1 / 3;
-            grid-row: 4 / 6;
-            max-width: 200px;
-            margin-top: 0;
-
-            .swiper-slide {
-                min-height: 200px;
-            }
-
-            .swiper-button-next, 
-            .swiper-button-prev{
-                display: none;
-            }
-
-        }
-
-    }
-
-    .contact{
-        .p-contact {
-            grid-column: 1 / 3;
-            grid-row: 3;
-            width: 75%;
-            height: 80px;
-        }
-
-        img{
-            display: none;
-        }
-
-
-
-        form {
-            width: 75%;
-            height: 90%;
-            grid-column: 1 / 3;
-            grid-row: 4 / 5;
-            gap: 0.3em;
-
-            align-self:initial;
-            justify-self: initial;
-
-
-            label {
-                gap: 0.3em;
-            }
-
-
-            input.name, input.email,  input.subject{
-                height: 5vh;
-
-            }
-
-        }
-
-        .credits {
-            grid-column: 1 / 3;
-            grid-row: 5 / 6;
-            font-size: 0.6em;
-            align-self: center;
-            width: 74%;
-            span {width: 43vw; }
-        }
-    }
-}
-
- */
