--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,10 +16,9 @@ header {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        font-size: 5vw;
+        font-size: 1.2rem;
         padding-left: 2em;
         gap: calc(1em + 2vw);
-        cursor: pointer;
 
         h1 {
             width: 67%;
@@ -49,7 +48,6 @@ header {
     .logo {
         width: calc(3em + 6vw);
         margin-left: 1em;
-        cursor: pointer;
     }
 
     .menu {
@@ -57,7 +55,6 @@ header {
         display: flex;
         flex-direction: column;
         gap: calc(0.3em + 0.8vw);
-        cursor: pointer;
         margin-right: 1em;
         z-index: 4;
 
