--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -15,9 +15,9 @@
     overflow: visible;
 
     .swiper-slide {
-      min-height: 200px;
-      text-align: center;
-      font-size: 18px;
+      min-height: 150px;
+    
+
       display: flex;
       justify-content: center;
       align-items: center;
@@ -29,6 +29,69 @@
         background-color: var(--primary-color);
         transform: scale(1.4);
         z-index: 2
+      }
+
+      img{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
+
+      .project-01.show{
+          visibility: visible;
+      }
+
+      .project-01{
+        visibility: hidden;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        //border: 8px var(--white) solid;
+        background-color: var(--primary-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:stretch;
+        gap: 0.7em;
+        padding-top: 0.7em;
+
+        h1{
+          color: var(--white);
+          font-family: conf.fontFamily(khmer-semibold);
+        }
+
+        p{
+          font-size: 0.7rem;
+          color: var(--white);
+
+          span{
+            color: var(--acent-color);
+          }
+        }
+
+        .buttons{
+          position: absolute;
+          display: flex;
+          flex-direction: row;
+          gap: 1em;
+          
+          top: 70%;
+          left: 13%;
+
+          a{
+            font-size: 0.8rem;
+            text-decoration: none;
+            background-color: transparent;
+            color:var(--white);
+            border: 2px var(--acent-color) solid;
+            padding: 0.4em;
+            border-radius: 0.4em;
+          }
+          
+
+        }
+       
+
       }
     }
 
