--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -15,7 +15,7 @@
     overflow: visible;
 
     .swiper-slide {
-      min-height: 150px;
+      min-height: 180px;
     
 
       display: flex;
@@ -76,7 +76,7 @@
           gap: 1em;
           
           top: 70%;
-          left: 13%;
+          left: calc(0.8em + 1vw);
 
           a{
             font-size: 0.8rem;
