--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,11 +3,11 @@
     --primary-dark-color: #ca1f9a;
     --secondary-color: #2D2F5E;
     --secondary-light-color: #37396D;
-    /* --secondary-color: #454545;
-    --secondary-light-color: #4D4D4D; */
     --secondary-dark-color: #585858;
     --acent-color: #29D7CC;
+    --acent-dark-color: #26bbb1;
     --white: #fff;
+    --dialog-color: #B4B4B4;
 
 }
 
@@ -21,7 +21,7 @@ $font-family: (
 );
 
 $font-size: (
-    font-body: calc(0.7em + 0.7vw),
+    font-body: calc(0.7em + 0.8vw),
 
 );
 
