--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -5,7 +5,7 @@
 .home {
 
     .arrow {
-        margin-top: 35em;
+        margin-top: 42%;
     }
 
     h1 {
@@ -42,12 +42,14 @@ header {
 }
 
 .container-header {
-    .logo{
+    .logo {
         cursor: pointer;
     }
+
     .menu {
         margin-right: 3em;
         cursor: pointer;
+
         &.close span:nth-child(2) {
             transform: rotate(-35deg) translate(-12px, 11px);
         }
@@ -60,6 +62,7 @@ header {
     width: 3%;
     left: 1%;
     padding-top: calc(1em + 34vw);
+
     .swiper-pagination-bullet {
         padding: calc(0.4em + 0.4vw);
     }
@@ -74,21 +77,17 @@ header {
 //ABOUT
 .about {
 
-    grid-template-columns: 150px repeat(2, 1fr) 200px;
+    grid-template-columns: 150px repeat(2, 1fr) 150px;
     grid-template-rows: 150px repeat(6, 1fr);
     justify-items: start;
 
     .p-about {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
-        width: 90%;
-    } 
-    
-    .rrss {
-        grid-column: 3 / 4;
-        grid-row: 6;
-        place-self: center;
+    }
 
+    .rrss {
+        grid-row: 6 / span 7;
         display: flex;
         gap: 1em;
         z-index: 4;
@@ -97,33 +96,56 @@ header {
 
     .card-profile {
         grid-column: 3 / 4;
-        grid-row: 1 / span 5;
-        align-self: flex-end;
-        
-        .saludo{
+        grid-row: 2 / span 5;
+        align-self: flex-start;
+
+        .saludo {
+            position: absolute;
             display: block;
-            visibility: visible;
-            background-color: #B4B4B4;
-            font-family: conf.fontFamily(khmer-semibold);
             text-align: center;
-            width: 70%;
-            padding: 0.4em;
-            border-radius: 0.5em;
+            font-family: conf.fontFamily(khmer);
             font-size: calc(0.7em + 1vw);
             color: var(--primary-color);
-            z-index: 5;
-            margin-right: 100%;
-            white-space: nowrap;
-            overflow: hidden;
+            z-index: 10;
+            right: 35%;
+            margin-top: .6em;
 
-            span{
+            overflow: hidden;
+            border-right: .15em solid var(--acent-color);
+            white-space: nowrap;
+
+
+            span {
                 color: var(--white);
                 font-family: conf.fontFamily(colombo-bold);
             }
         }
+
+        .dialog {
+            background-color: var(--dialog-color);
+            width: 70%;
+            height: 70px;
+            padding: 0.4em;
+            border-radius: 0.5em;
+            margin-right: 100%;
+
+        }
+
+        .dialog::before {
+            content: "";
+            width: 0;
+            height: 0;
+            position: absolute;
+            margin: 60px 0 0 110px;
+            border-top: 30px solid var(--dialog-color);
+            border-right: 30px solid transparent;
+            border-left: 30px solid transparent;
+
+        }
+
         .p-animation {
-            
-            animation: typewriter 1s steps(50) 1 normal both;
+
+            animation: typewriter 3.5s steps(40, end), blink-caret .75s step-end infinite;
         }
 
 
@@ -141,10 +163,22 @@ header {
             }
 
             to {
-                width: 75%;
+                width: 15%;
             }
         }
 
+
+        @keyframes blink-caret {
+
+            from,
+            to {
+                border-color: transparent;
+            }
+
+            50% {
+                border-color: var(--acent-color);
+            }
+        }
     }
 }
 
@@ -203,9 +237,22 @@ header {
         margin-top: 6em;
         max-width: 350px;
 
+
+        .swiper-slide:nth-child(1):hover {
+            img {
+                display: none
+            }
+            .project-01{
+                visibility: visible;
+                .buttons{
+                    left: calc(5em + 1vw);
+                }
+            }
+                                   
+        }
+
         .swiper-slide {
             min-height: 200px;
-
         }
 
         /* ARROWS */
@@ -244,15 +291,14 @@ header {
     }
 
     form {
-        width: 70%;
+        width: 59%;
         grid-column: 3 / 4;
         grid-row: 3 / 7;
-
-        gap: 0.8em;
+        gap: 0.5em;
         z-index: 4;
 
         label {
-            gap: 0.7em;
+            gap: 0.5em;
         }
 
 
@@ -271,8 +317,13 @@ header {
 
         .submit {
             height: 8vh;
+            cursor: pointer;
+            
+            &:hover{
+                background-color: var(--primary-color);
+            }
         }
-        
+
         .b-contact {
             position: absolute;
             display: block;
